# cognitive-mcp

./: .gitignore  cognitive-research.md  pyproject.toml
src/cognitive_mcp/: server.py
src/cognitive_mcp/tools/: primitives.py
